fix: reposition contrast toggle to top left

--- a/src/components/AdvancedPlayground.scss
+++ b/src/components/AdvancedPlayground.scss
@@ -29,7 +29,7 @@
   }
   &__contrast-switch {
     position: absolute;
-    bottom: $space-medium;
+    top: $space-medium;
     left: $space-large;
   }
 }
